CP-5547:rework print button

--- a/local/templates/aspro_next/template_styles.css
+++ b/local/templates/aspro_next/template_styles.css
@@ -6292,8 +6292,10 @@ ul.menu.menu_top_block, ul.menu.menu_top_block li {
 }
 
 .print {
-    float:right;
+    display:flex;
+    justify-content:center;
+    height:45px;
+  
 }
-
 
 
