CP-5547: css fixes

--- a/local/templates/aspro_next/template_styles.css
+++ b/local/templates/aspro_next/template_styles.css
@@ -6295,6 +6295,7 @@ ul.menu.menu_top_block, ul.menu.menu_top_block li {
     display:flex;
     justify-content:center;
     height:45px;
+    margin-top:20px;
   
 }
 
