CP-5549:catalog detail

--- a/local/templates/aspro_next/template_styles.css
+++ b/local/templates/aspro_next/template_styles.css
@@ -6332,6 +6332,12 @@ ul.menu.menu_top_block, ul.menu.menu_top_block li {
     padding-top:10px;
 }
 
+@media only screen  and (max-width: 414px)  {
+.bottom_navigation {
+
+ padding:0;   
+}   
+}
 
 
 @media screen and (max-width: 450px) {
@@ -6357,3 +6363,29 @@ ul.menu.menu_top_block, ul.menu.menu_top_block li {
     display:flex;
     justify-content:space-between;
 }
+
+
+.horizontal-multilevel-menu{
+    
+    display:flex;
+    justify-content:space-between;
+}
+
+
+.order_button  {
+    display: block;
+    height: 50px;
+    width: 180px;
+    background-color: red;
+    border:2px solid black;
+    padding-top: 15px;
+    padding-left: 25px;
+    text-align: center;
+    padding-bottom: 10px;
+    padding-right: 25px;
+    color: white;
+    text-decoration: solid;
+    font-size: 16px;
+    border-radius: 6px;
+    
+    }
