--- a/local/templates/aspro_next/css/styles.css
+++ b/local/templates/aspro_next/css/styles.css
@@ -308,7 +308,7 @@ body .breadcrumbs .dropdown{ background:#fff;padding: 12px; border-radius: 2px; 
 
 .catalog_detail .item_main_info .buttons_block { border-radius: 2px; -moz-border-radius: 2px; -webkit-border-radius: 2px; width: 100%; }
 .catalog_detail .item_main_info { margin: 0px 0 30px; padding: 0px; border: 1px solid #f2f2f2; position: relative; }
-.catalog_detail .item_main_info .item_slider { width: 50%; box-sizing: border-box; -moz-box-sizing: border-box; -o-box-sizing: border-box; -webkit-box-sizing: border-box; padding: 29px 56px 29px 56px;  float: left; position: relative; z-index: 1;text-align:center; }
+.catalog_detail .item_main_info .item_slider { width: 50%; box-sizing: border-box; -moz-box-sizing: border-box; -o-box-sizing: border-box; -webkit-box-sizing: border-box;/* padding: 29px 56px 29px 56px; */ float: left; position: relative; z-index: 1;text-align:center; }
 .catalog_detail .item_main_info .right_info { padding: 0px 0px 0px 50%; position: relative; }
 .catalog_detail .item_main_info .right_info .info_item { position: relative;padding:0px 30px 0px 11px;}
 #order_form_div .info_block  .l_block:after, #order_form_div .info_block .r_block:before { position: absolute; top: 0px; background: #F2F2F2; width: 1px; height: 100%; content: ""; }
