CP-5549/5552/5553: other fixes

--- a/local/templates/aspro_next/components/bitrix/catalog/main/style.css
+++ b/local/templates/aspro_next/components/bitrix/catalog/main/style.css
@@ -23,13 +23,13 @@
 }
 
 .horisontale_filter>li>a:before{
-    /*display: none; */
+    display: none;
 }
 .right_block ul.horisontale_filter>li:before , .right_block ul.horisontale_filter li:before{
-   /* display: none;  */
+    display: none;
 }
 .horisontale_filter>li>a:after{
-        /*display: none;/*
+        
     /*font-size: 13px;
     font: normal normal normal 14px/1 FontAwesome;
     top: 19px;
