CP-5549: remove chat block, syntax error fixed

--- a/local/templates/aspro_next/components/bitrix/catalog/main/style.css
+++ b/local/templates/aspro_next/components/bitrix/catalog/main/style.css
@@ -29,7 +29,7 @@
     display: none;
 }
 .horisontale_filter>li>a:after{
-        
+        display: none;
     /*font-size: 13px;
     font: normal normal normal 14px/1 FontAwesome;
     top: 19px;
