--- a/local/templates/aspro_next/styles.css
+++ b/local/templates/aspro_next/styles.css
@@ -10,7 +10,7 @@ a h3{display:inline-block;}
 h4{font-size:16px;}
 h5{font-size: 14px;}
 
-h1{font-size:2.133em;line-height:30px;margin:0 0 18px;font-weight:bold;}
+h1{font-size:26px;line-height:30px;margin:0 0 18px;font-weight:bold;}
 h2{font-size:1.866em;line-height:28px;margin: 40px 0 26px;}
 h3{font-size:1.6em;  line-height:24px;margin: 40px 0 26px;}
 h4{font-size:1.33em; line-height:20px;margin: 40px 0 26px;}
