--- a/local/templates/aspro_next/themes/custom_s1/theme.css
+++ b/local/templates/aspro_next/themes/custom_s1/theme.css
@@ -634,6 +634,7 @@ h4:hover .opener_icon,
   color: #554e40 !important;
   border: 1px solid #554e40;
   background: #ffffff;
+  height:40px;
 }
 .btn.btn-default.white:hover,
 .btn-default.white:active,
