CP-5552: font and delivery text

--- a/local/templates/aspro_next/components/bitrix/catalog.element/main/style.css
+++ b/local/templates/aspro_next/components/bitrix/catalog.element/main/style.css
@@ -53,3 +53,10 @@ button.btn-get_discount{
 
 }
 
+
+.showroom_txt{
+    border-left: 3px solid orange;
+    padding-left: 6px;
+    margin-bottom: 20px;
+}
+
