--- a/local/templates/aspro_next/components/bitrix/catalog.element/main/style.css
+++ b/local/templates/aspro_next/components/bitrix/catalog.element/main/style.css
@@ -16,10 +16,11 @@ p.card_title {
 
 .catalog_detail .element_detail_text .showroom_txt {
     color: #7d7d7d;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 18px;
     border-left: 3px solid orange;
     padding-left: 6px;
+    margin-top:20px;
 }
 .catalog_detail .element_detail_text .price_txt{
     border-left: 3px solid orange;
@@ -58,5 +59,7 @@ button.btn-get_discount{
     border-left: 3px solid orange;
     padding-left: 6px;
     margin-bottom: 20px;
+    
+    
 }
 
