CP-5552: catalog detail fixes

--- a/local/templates/aspro_next/themes/custom_s1/theme.css
+++ b/local/templates/aspro_next/themes/custom_s1/theme.css
@@ -635,6 +635,8 @@ h4:hover .opener_icon,
   border: 1px solid #554e40;
   background: #ffffff;
   height:40px;
+  width: 250px;
+  margin-top: 2px;
 }
 .btn.btn-default.white:hover,
 .btn-default.white:active,
